# umai-core-ce

./: .gitignore  Cargo.toml  Dockerfile.ebpf  NOTICE  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
examples/: umai-core.toml  umai-sync.sh
playground/: README.md  demo-exploit.sh  docker-compose.yml
playground/mock-mcp/: Dockerfile  server.py
umai-common/: Cargo.toml
umai-common/src/: lib.rs
umai-kernel/: Cargo.toml  rust-toolchain.toml
umai-kernel/.cargo/: config.toml
umai-kernel/src/: main.rs
umai-loader/: Cargo.toml
umai-loader/src/: main.rs
umai-tui/: Cargo.toml
umai-tui/src/: main.rs
