[package]
name = "umai-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

# Phase A note: the iter-0 TUI talked to umai-agent's gRPC server, which
# is not part of the open-source CE. For the public release the TUI is a
# placeholder binary that prints "coming soon" and exits. v0.2 will
# re-implement it as a standalone reader of the in-kernel BPF maps via
# aya (no gRPC dep), which fits the CE architecture cleanly.

[dependencies]
anyhow      = { workspace = true }
